src/test/ui/impl-trait/type_parameters_captured.stderr
error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/type_parameters_captured.rs:7:20
   |
LL | fn foo<T>(x: T) -> impl Any + 'static {
   |        -           ^^^^^^^^^^^^^^^^^^
   |        |
   |        help: consider adding an explicit lifetime bound `T: 'static`...
   |
note: ...so that the type `T` will meet its required lifetime bounds
  --> $DIR/type_parameters_captured.rs:7:20
   |
LL | fn foo<T>(x: T) -> impl Any + 'static {
   |                    ^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0310`.
